--- a/Demo/Settings.xaml
+++ b/Demo/Settings.xaml
@@ -6,17 +6,33 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <Storyboard x:Name="Story">
+            <DoubleAnimation Storyboard.TargetName="border" Storyboard.TargetProperty="Height" To="0" Duration="0:0:.8" BeginTime="0:0:0" EnableDependentAnimation="True" SpeedRatio=".9">
+                <DoubleAnimation.EasingFunction>
+                    <CircleEase EasingMode="EaseOut" />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+        </Storyboard>
+    </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Pivot>
             <PivotItem Header="常规">
-                <Grid>
-                    <Border VerticalAlignment="Top" Height="30" Width="320" Background="#36C3F1" Padding="0" BorderBrush="#36C3F1" 
-                            BorderThickness="1.4" 
-                            CornerRadius="5" Margin="6">
-                       
+                <StackPanel>
+                    <Border Grid.Row="0" Height="80" x:Name="border">
                     </Border>
-                </Grid>
+                    <ToggleSwitch  x:Name="DoubleClickExit" Margin="10" Header="是否双击退出程序" Toggled="ToggleSwitch_Toggled"/>
+                    <!--<ToggleSwitch  Margin="10" Toggled="ToggleSwitch_Toggled">
+                        <ToggleSwitch.HeaderTemplate>
+                            <DataTemplate>
+                                <StackPanel>
+                                    <TextBlock Text="是否双击退出"/>
+                                    <TextBlock Text="是否双击退出"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ToggleSwitch.HeaderTemplate>
+                    </ToggleSwitch>-->
+                </StackPanel>
             </PivotItem>
            
         </Pivot>
