--- a/Demo/StartMainPage.xaml
+++ b/Demo/StartMainPage.xaml
@@ -9,14 +9,14 @@
     DataContext="{Binding PageDataBinding,RelativeSource={RelativeSource Mode=Self}}">
     <Page.Resources>
         <Storyboard x:Name="BigBig">
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="border" Storyboard.TargetProperty="Height" BeginTime="0:0:0" Duration="0:0:10" EnableDependentAnimation="True" SpeedRatio="1.3" RepeatBehavior="Forever">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="border" Storyboard.TargetProperty="Height" BeginTime="0:0:0" Duration="0:0:9.5" EnableDependentAnimation="True" SpeedRatio="1.3" RepeatBehavior="Forever">
                 <EasingDoubleKeyFrame KeyTime="0:0:4.5" Value="0">
                     <EasingDoubleKeyFrame.EasingFunction>
                         <CircleEase EasingMode="EaseOut" />
                     </EasingDoubleKeyFrame.EasingFunction>
                 </EasingDoubleKeyFrame>
-                <EasingDoubleKeyFrame KeyTime="0:0:5.5" Value="0" />
-                <EasingDoubleKeyFrame KeyTime="0:0:10" Value="50">
+                <EasingDoubleKeyFrame KeyTime="0:0:5" Value="0" />
+                <EasingDoubleKeyFrame KeyTime="0:0:9.5" Value="50">
                     <EasingDoubleKeyFrame.EasingFunction>
                         <CircleEase EasingMode="EaseIn" />
                     </EasingDoubleKeyFrame.EasingFunction>
@@ -24,40 +24,42 @@
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
     </Page.Resources>
-    <Grid Margin="0 -50" Height="Auto" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Border x:Name="border" Grid.Row="0" Height="50" VerticalAlignment="Top"/>
-        <Grid Grid.Row="1">
-            <Image Source="{Binding DayImagePath}"  Stretch="UniformToFill" />
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid Margin="0 -50" Height="Auto" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition  Height="*"/>
+                <RowDefinition  Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Border x:Name="border" Grid.Row="0" Height="50" VerticalAlignment="Top"/>
+            <Grid Grid.Row="1">
+                <Image Source="{Binding DayImagePath}"  Stretch="UniformToFill" />
+            </Grid>
+            <Border x:Name="borderaa" Grid.Row="2" Height="{Binding ElementName=border, Path=Height}" VerticalAlignment="Bottom"/>
         </Grid>
-        <Grid Grid.Row="1">
-            <Grid Background="Black" Opacity=".5">
-                <Grid Margin="6">
-                    <Grid.RowDefinitions>
-                        <RowDefinition  Height="*"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition  Height="Auto"/>
-                        <RowDefinition  Height="Auto"/>
-                        <RowDefinition  Height="Auto"/>
-                        <RowDefinition  Height="50"/>
-                    </Grid.RowDefinitions>
-                    <TextBlock Margin="6 6 6 0"  Grid.Row="1" TextWrapping="Wrap"  Foreground="White" Text="{Binding OneDay}" FontFamily="Consolas" FontSize="80" x:Name="OneName"/>
-                    <StackPanel Margin="5"  Grid.Row="2" Orientation="Horizontal">
-                        <TextBlock Margin="8" FontFamily="Consolas" TextWrapping="Wrap"  Foreground="White" Text="{Binding Vol}" x:Name="Vol"/>
-                        <TextBlock Margin="8" FontFamily="Consolas" TextWrapping="Wrap"  Foreground="White" Text="|" />
-                        <TextBlock Margin="8" FontFamily="Consolas" TextWrapping="Wrap"  Foreground="White" Text="{Binding OneMonthAndYear}" x:Name="MonthAndYear"/>
-                    </StackPanel>
-                    <TextBlock Margin="8" Grid.Row="3" TextWrapping="Wrap" Foreground="White" FontSize="18" Text="{Binding MainString}" x:Name="DayContent" RelativePanel.Above="MonthAndYear"/>
-                    <StackPanel Grid.Row="4" x:Name="myPanel" Orientation="Vertical">
-                        <Button Template="{StaticResource MyButtonTemplate}" Content="进入ONE-一个" Click="Button_Click" VerticalAlignment="Bottom" Margin="0 0 0 6" HorizontalAlignment="Center"/>
-                    </StackPanel>
+            <Grid Grid.Row="1">
+                <Grid Background="Black" Opacity=".5">
+                    <Grid Margin="6">
+                        <Grid.RowDefinitions>
+                            <RowDefinition  Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition  Height="Auto"/>
+                            <RowDefinition  Height="Auto"/>
+                            <RowDefinition  Height="Auto"/>
+                            <RowDefinition  Height="30"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Margin="6 6 6 0"  Grid.Row="1" TextWrapping="Wrap"  Foreground="White" Text="{Binding OneDay}" FontFamily="Consolas" FontSize="80" x:Name="OneName"/>
+                        <StackPanel Margin="5"  Grid.Row="2" Orientation="Horizontal">
+                            <TextBlock Margin="8" FontFamily="Consolas" TextWrapping="Wrap"  Foreground="White" Text="{Binding Vol}" x:Name="Vol"/>
+                            <TextBlock Margin="8" FontFamily="Consolas" TextWrapping="Wrap"  Foreground="White" Text="|" />
+                            <TextBlock Margin="8" FontFamily="Consolas" TextWrapping="Wrap"  Foreground="White" Text="{Binding OneMonthAndYear}" x:Name="MonthAndYear"/>
+                        </StackPanel>
+                        <TextBlock Margin="8" Grid.Row="3" TextWrapping="Wrap" Foreground="White" FontSize="18" Text="{Binding MainString}" x:Name="DayContent" RelativePanel.Above="MonthAndYear"/>
+                        <StackPanel Grid.Row="4" x:Name="myPanel" Orientation="Vertical">
+                            <Button Template="{StaticResource MyButtonTemplate}" Content="进入ONE-一个" Click="Button_Click" Foreground="White" VerticalAlignment="Bottom" Margin="0 0 0 6" HorizontalAlignment="Center"/>
+                        </StackPanel>
+                    </Grid>
                 </Grid>
             </Grid>
-        </Grid>
-        <Border x:Name="borderaa" Grid.Row="2" Height="{Binding ElementName=border, Path=Height}" VerticalAlignment="Bottom"/>
     </Grid>
 </Page>
