--- a/Demo/Main.xaml
+++ b/Demo/Main.xaml
@@ -226,7 +226,11 @@
                 </StackPanel>
             </Border>
         </Grid>
+        <Rectangle x:Name="DemoDemo" Width="50" Margin="-25 0" Opacity="0" Fill="Yellow" HorizontalAlignment="Left" ManipulationMode="TranslateX"  ManipulationCompleted="DemoDemo_ManipulationCompleted">
+            <Rectangle.RenderTransform>
+                <TranslateTransform x:Name="Demo" />
+            </Rectangle.RenderTransform>
+        </Rectangle>
     </Grid>
-
 
 </Page>
