--- a/Demo/StartMainPage.xaml
+++ b/Demo/StartMainPage.xaml
@@ -33,7 +33,8 @@
             </Grid.RowDefinitions>
             <Border x:Name="border" Grid.Row="0" Height="50" VerticalAlignment="Top"/>
             <Grid Grid.Row="1">
-                <Image Source="{Binding DayImagePath}"  Stretch="UniformToFill" /><Grid Margin="6">
+                <Image Source="{Binding DayImagePath}" Stretch="UniformToFill" />
+                <Grid Margin="6">
                     <Grid.RowDefinitions>
                         <RowDefinition  Height="*"/>
                         <RowDefinition Height="Auto"/>
